2008-01-10  Michael Kifer  <kifer@cs.stonybrook.edu>
	
	* ediff*.el: uncommented declare-function.
	
	* viper*.el: uncommented declare-function.
	
2008-01-09  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode): Support tramp, compressed files and
	files inside archives uniformly.

2008-01-09  Eric S. Raymond  <esr@snark.thyrsus.com>

	* testmodes/sgml-mode.el (sgml-tag-syntax-table):  Initialize this
	constant with a computation on sgml-specials rather than a literal
	list.  Without this change the syntax table is generated
	incorrectly, and the mode will think it's in a comment following
	any instance of the string "--".

2008-01-09  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode-p): Add EPS as supported type.
	(doc-view-mode): Support document files inside archives.

2008-01-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-deduce-fileset): Return the currently selected file if
	no files are selected when using vc-status.

2008-01-09  Michael Kifer  <kifer@cs.stonybrook.edu>

	* ediff*.el: commented out declare-function. "make bootstrap"
	stops with an error and emacs does not compile with those things in.
	Besides, declare-function is not defined in XEmacs.

	* ediff-util (eqiff-quit): autoraise minibuffer.

	* ediff-diff (ediff-convert-fine-diffs-to-overlays): make it a defin

	* viper*.el: commented out declare-function -- not defined in XEmacs.

	* viper-ex.el (viper-info-on-file): take care of indiret buffers.

	* viper.el (viper-set-hooks, set-cursor-color): set viper-vi-state-cursor-color.

2008-01-09  Tom Tromey  <tromey@redhat.com>

	* vc.el (vc-status-headers): Rename from
	vc-status-insert-headers.  Just return header.
	(vc-status-move-to-goal-column): New function.
	(vc-status-mode-map): Define more keys.
	(vc-status-mode): Use vc-status-refresh.  Now 'special.
	(vc-status-refresh): New function.
	(vc-status-next-line): Likewise.
	(vc-status-previous-line): Likewise.